# ump

./: README.md  ump-1.2-1.i386.rpm  ump-1.2.spec  ump-debuginfo-1.2-1.i386.rpm
ump-1.2/: AUTHORS  Blink.desktop.in  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  autogen.sh  common.h  config.h.in  config.h.in~  configure  configure.in  exmask.ps
ump-1.2/autom4te.cache/: output.1  requests  traces.0  traces.1
ump-1.2/config/: Makefile.am  Makefile.in  ac_cxx_have_fmath.m4  ac_cxx_have_new_handler.m4  ac_cxx_have_std.m4  ac_cxx_namespaces.m4  ac_have_endian.m4  ac_have_ioperm.m4  ac_have_magick.m4  ac_have_sbrk.m4  adl_func_getopt_long.m4
ump-1.2/data/: Makefile.am  Makefile.in
ump-1.2/data/X/: L120x90S2.tim  Makefile.am  Makefile.in  N120x90S2.tim  checkit  video0.cal  video0.mask  video0.tune  video1.cal.L  video1.tune  xLas.clk.L  xLas.raw  xLas.set  xLas.tim  xLbs.raw  xLbs.set  xLbs.tim  zone.tune
ump-1.2/data/X/cal/: Makefile.am  Makefile.in  cal.xls  cal0.raw  cal0.set  cal0.tim  cal1.raw  cal1.set  snapA1.pgm  snapB1.pgm  video0.cal  video0.cal.L  video0.cal.Tsa  video0.cal.Zin  video0.cam  video0.maskA  video0.maskB  video0.maskC  video0.tam  video1.cal.L  video1.cal.Tsa  video1.cal.Zin  video1.cal.checkSetup  video1.cam  video1.maskA  video1.maskB  video1.maskC  video1.tam  video1.tune
ump-1.2/data/X/xLs_images/: Makefile.am  Makefile.in  tempR0.ppm  tempR0001.mm  tempR0001.ppm  tempR0002.mm  tempR0002.ppm  tempR0003.mm  tempR0003.ppm  tempR0004.mm  tempR0004.ppm  tempR0005.mm  tempR0005.ppm  tempR0006.lbl  tempR0006.mm  tempR0006.ppm  tempR0007.lbl  tempR0007.mm  tempR0007.ppm  tempR0008.lbl  tempR0008.mm  tempR0008.ppm  tempR0009.mm  tempR0009.ppm  tempR0010.lbl  tempR0010.mm  tempR0010.ppm  tempR0011.lbl  tempR0011.mm  tempR0011.ppm  tempR0012.mm  tempR0012.ppm  tempR0013.lbl  tempR0013.mm  tempR0013.ppm  tempR0014.lbl  tempR0014.mm  tempR0014.ppm  tempR1.ppm  tempR1001.lbl  (+54 more)
ump-1.2/doc/: Makefile.am  Makefile.in  cuts.lyx  error.ps  exmask.txt  focal.ps  im139+.ps  im139.ps  interpOXX.ps  interpXOX.ps  interpXXO.ps  perim.ps  realsum.ps  realvid0.ps  realvid1.ps  scrnshot.ps  strike.ps  tempRCx.ps  transform.ps  triangulate.ps  ump.info  ump.omf  ump.texi  video0ResM.ps  video0TResM.ps  video1ResM.ps  video1TResM.ps  videoOneAa.ps  videoOneFa10+.ps  videoOneFa10.ps  vision.bib  xerror.ps  yerror.ps  zerror.ps
ump-1.2/doc/ump/: Checks.html  Concept-Index.html  Dependencies.html  External-Calibration.html  Input-Files.html  Install-Video-Cards.html  Installation.html  Main-Application.html  Maintenance.html  Makefile.am  Makefile.in  Messages.html  Options.html  Output-Files.html  Overview.html  Program-Index.html  Program-Notes.html  Samples.html  Streamer-Functions.html  Troubleshooting.html  Tune.html  What-Gets-Installed.html  When-Things-Go-Wrong.html  blas.html  index.html
ump-1.2/scripts/: Makefile.am  Makefile.in  Rcut.m  calibrate.m  center.m  circle.m  cof4.m  contract.m  cut_the_image.m  det4.m  discrete_area.m  eigcut.m  eigcut2.m  eigcut3.m  extCal.m  fiedler.m  fiedler_image.m  fiedler_image4.m  gaussian.m  image_map.m  inv4.m  makeUmpDist  makeW.m  mincut.m  mincut2.m  newIntCal.m  overwrite  printmat.m  printsmat.m  printv.m  rayleigh.m  rayleigh_it.m  rayleigh_mit.m  recur.m  recursive_partition.m  replace  resolve.m  savemms  saveppms  scaleim.m  (+22 more)
ump-1.2/src/: Ball.cc  Ball.h  Image.cc  Image.h  Makefile.am  Makefile.in  Mask.cc  Mask.h  PixelLoc.cc  PixelLoc.h  Segment.cc  Segment.h  Tune.cc  Tune.h  Ump  checkCal  checkFile  checkKill  checkKillEnd  checkOfile  checkReal  checkRealAll  checkSetup  checkTriangulate  checkUmp  convertTsai.cc  extCal.cc  killSty  killUmp  lptout.c  lptoutd.c  main.cc  sliceraw.cc  tim2clk.cc  triangulate.cc  ump.x
ump-1.2/src/glade/: Blink.cc  Makefile.am  Makefile.in  MyMask.cc  MyMask.h  State.cc  State.h  blink.glade  callbacks.cc  callbacks.h
ump-1.2/src/image_utils/: Makefile.am  Makefile.in  mm2ppm.cc
ump-1.2/src/l/: Cerror.c  Cerror.h  Cwrappers.c  Cwrappers.h  Cwrappthread.c  Cwrappthread.h  InFile.cc  InFile.h  Makefile.am  Makefile.in  UmpString.h  checkMem.cc  checkMem.h  curve.cc  curve.h  makeargv.c  makeargv.h  memory_err.h  mmio.c  mmio.h  myTime.cc  myTime.h  second.cc  second.h  stringset.cc  stringset.h  writefile.c  writefile.h  zap.h
ump-1.2/src/l/tnt/: Makefile.am  Makefile.in  cmat.h  fcscmat.h  fmat.h  fspvec.h  index.h  lapack.h  qr.h  region1d.h  region2d.h  tnt.h  tntmath.h  transv.h  triang.h  vec.h  vecadaptor.h
ump-1.2/src/realstream/: Makefile.am  Makefile.in  capturey.c  capturey.h  channel.c  channel.h  commands.c  commands.h  frequencies.c  frequencies.h  grab-v4l-stat.h  grab-v4l2y.c  grab-v4ly.c  grab.h  graby.c  parseconfig.c  parseconfig.h  realStream.cc  realStream.h  streamery.c  videodev.h  videodev2.h  writefile.c  writefile.h
