bin_SCRIPTS = showppms showmms saveppms savemms makeUmpDist \
              startUmpInfo overwrite replace
EXTRA_DIST  = showppms showmms saveppms savemms makeUmpDist shootSnaps \
              startUmpInfo overwrite replace \
              extCal.m umpExcelTools.tar.gz \
              calibrate.m center.m circle.m cof4.m contract.m cut_the_image.m \
              det4.m discrete_area.m eigcut2.m eigcut3.m eigcut.m extCal.m \
              fiedler_image4.m fiedler_image.m fiedler.m gaussian.m image_map.m\
              inv4.m makeW.m mincut2.m mincut.m newIntCal.m printmat.m \
              printsmat.m printv.m rayleigh_it.m rayleigh.m rayleigh_mit.m \
              Rcut.m recur.m recursive_partition.m resolve.m scaleim.m \
              stochcut.m stochdisp.m stoch_image3.m stoch_image.m stoich.m \
              swapcol.m swaprow.m tab2.m tempR044.m tempR045.m tempR074.m \
              test_exp.m test_pattern.m testTsai.m trans.m triangulate.m \
              untriangulate.m write_csc.m


