EXTRA_DIST = video0.tune video1.tune zone.tune \
video0.cal  video1.cal \
video0.cal.L  video0.cal.Tsai  video1.cal.L  video1.cal.Tsai \
L120x90S2.tim N120x90S2.tim \
video0.mask  video1.mask \
xL.dat xLas.tim xLas.raw xLas.set xLTsai.dat xLv.dat xLbs.tim \
xLbs.raw xLbs.set xLvTsai.dat checkit \
xLas.clk.L

SUBDIRS = cal xLs_images
