EXTRA_DIST  = \
blas.html                  Input-Files.html          Options.html        Streamer-Functions.html \
Checks.html                Installation.html         Output-Files.html   Troubleshooting.html \
Concept-Index.html         Install-Video-Cards.html  Overview.html       Tune.html \
Dependencies.html          Main-Application.html     Program-Index.html  What-Gets-Installed.html \
External-Calibration.html  Maintenance.html          Program-Notes.html  When-Things-Go-Wrong.html \
index.html                 Messages.html             Samples.html
