noinst_LIBRARIES = libump.a
AM_CXXFLAGS      = -DNO_BOUNDS_CHECK

libump_a_SOURCES = \
 Cerror.c Cerror.h\
 Cwrappers.c Cwrappers.h\
 Cwrappthread.c Cwrappthread.h\
 InFile.cc InFile.h\
 curve.cc  curve.h\
 makeargv.c makeargv.h\
 memory_err.h\
 mmio.c mmio.h\
 second.cc second.h \
 stringset.cc stringset.h UmpString.h\
 checkMem.cc checkMem.h\
 writefile.c writefile.h\
 zap.h \
 myTime.cc myTime.h

INCLUDES = -I@top_srcdir@

SUBDIRS = tnt


