EXTRA_DIST =  world.dat video0.dat video1.dat       \
video0.cal video0.cal.L video1.cal video1.cal.L     \
video0.mask video0.maskA video0.maskB video0.maskC  \
video1.mask video1.maskA video1.maskB video1.maskC  \
video0.tune video1.tune                             \
endendA.dat endendB.dat endendC.dat                 \
video0.dat video1.dat video0.cam video1.cam         \
video0.tam video1.tam                               \
video0.cal.Zin video1.cal.Zin                       \
video0.cal.Tsa video1.cal.Tsa                       \
video0.cal.checkSetup video1.cal.checkSetup         \
triangulate.dat                                     \
cal.xls cal0.raw cal0.set cal1.tim cal1.set cal0.tim\
cal1.raw snapA1.pgm snapB1.pgm video0.tune video1.tune





