EXTRA_DIST =   tempRC0001.lbl tempRC0001.ppm tempRC0002.lbl tempRC0002.ppm\
tempRC0003.lbl tempRC0003.ppm tempRC0004.lbl tempRC0004.ppm \
tempRC0005.lbl tempRC0005.ppm tempRC0006.lbl tempRC0006.ppm \
tempRC0007.lbl tempRC0007.ppm tempRC0008.lbl tempRC0008.ppm \
tempRC0009.lbl tempRC0009.ppm tempRC0010.lbl tempRC0010.ppm \
tempRC0011.lbl tempRC0011.ppm tempRC0012.lbl tempRC0012.ppm \
tempRC0013.lbl tempRC0013.ppm tempRC0014.lbl tempRC0014.ppm \
tempRC1001.lbl tempRC1001.ppm tempRC1002.lbl tempRC1002.ppm \
tempRC1003.lbl tempRC1003.ppm tempRC1004.lbl tempRC1004.ppm \
tempRC1005.lbl tempRC1005.ppm tempRC1006.lbl tempRC1006.ppm \
tempRC1007.lbl tempRC1007.ppm tempRC1008.lbl tempRC1008.ppm \
tempRC0.ppm    tempRC1.ppm    tempR0.ppm     tempR0001.lbl  \
tempR0001.mm   tempR0001.ppm  tempR0002.lbl  tempR0002.mm   \
tempR0002.ppm  tempR0003.lbl  tempR0003.mm   tempR0003.ppm  \
tempR0004.lbl  tempR0004.mm   tempR0004.ppm  tempR0005.lbl  \
tempR0005.mm   tempR0005.ppm  tempR0006.lbl  tempR0006.mm   \
tempR0006.ppm  tempR0007.lbl  tempR0007.mm   tempR0007.ppm  \
tempR0008.lbl  tempR0008.mm   tempR0008.ppm  tempR0009.lbl  \
tempR0009.mm   tempR0009.ppm  tempR0010.lbl  tempR0010.mm   \
tempR0010.ppm  tempR0011.lbl  tempR0011.mm   tempR0011.ppm  \
tempR0012.lbl  tempR0012.mm   tempR0012.ppm  tempR0013.lbl  \
tempR0013.mm   tempR0013.ppm  tempR0014.lbl  tempR0014.mm   \
tempR0014.ppm  tempR1.ppm     tempR1001.lbl  tempR1001.mm   \
tempR1001.ppm  tempR1002.lbl  tempR1002.mm   tempR1002.ppm  \
tempR1003.lbl  tempR1003.mm   tempR1003.ppm  tempR1004.lbl  \
tempR1004.mm   tempR1004.ppm  tempR1005.lbl  tempR1005.mm   \
tempR1005.ppm  tempR1006.lbl  tempR1006.mm   tempR1006.ppm  \
tempR1007.lbl  tempR1007.mm   tempR1007.ppm  tempR1008.lbl  \
tempR1008.mm   tempR1008.ppm


